force-app/main/default/objects/Course_Selection__c/Course_Selection__c.object-meta.xml
<CustomObject>
    <label>Course Selection</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Course Selection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Selection</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>