force-app/main/default/objects/Course_Selection__c/fields/Available_Course__c.field-meta.xml
<CustomField>
    <fullName>Available_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Available Course</label>
    <referenceTo>Available_Course__c</referenceTo>
    <relationshipLabel>Course Selection</relationshipLabel>
    <relationshipName>Course_Selection</relationshipName>
    <type>Lookup</type>
</CustomField>