force-app/main/default/objects/Course_Selection__c/fields/Course_No__c.field-meta.xml
<CustomField>
    <fullName>Course_No__c</fullName>
    <formula>Available_Course__r.Course_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course No.</label>
    <type>Text</type>
</CustomField>