force-app/main/default/objects/Course_Selection__c/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Semester</label>
    <referenceTo>Semesters__c</referenceTo>
    <relationshipLabel>Course Selection</relationshipLabel>
    <relationshipName>Course_Selection</relationshipName>
    <type>Lookup</type>
</CustomField>