force-app/main/default/objects/Course_Selection__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <label>Student</label>
    <referenceTo>Students__c</referenceTo>
    <relationshipLabel>Course Selection</relationshipLabel>
    <relationshipName>Course_Selection</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>